<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<LinearLayout
	android:id="@+id/layout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="680px">
    <LinearLayout
	android:orientation="horizontal"
	android:layout_width="fill_parent"
	android:layout_height="60px">
	    <TextView
	    android:layout_width="160px" 
	    android:layout_height="wrap_content"
	    android:layout_gravity ="center_vertical"
	    android:gravity="center"
	    android:textSize="30px"
	    android:text="@string/username" 
		/>
	    <EditText
	    android:id="@+id/nameedit"
	    android:layout_width="260px" 
	    android:layout_height="wrap_content"
	    android:layout_gravity ="center_vertical"
	    android:textSize="30px"
		/>
		<TextView
	    android:layout_width="60px" 
	    android:layout_height="wrap_content"
	    android:layout_gravity ="center_vertical"
	    android:gravity="center"
	    android:textSize="30px"
	    android:text="@string/mustfill" 
		/>
	</LinearLayout>
	<TextView
	    android:layout_width="fill_parent" 
	    android:layout_height="50px"
	    android:layout_marginLeft="160px"
	    android:gravity="center_vertical"
	    android:textSize="20px"
	    android:text="@string/namesuggest" 
	/>
	<LinearLayout
	android:orientation="horizontal"
	android:layout_width="fill_parent"
	android:layout_height="60px">
	    <TextView
	    android:layout_width="160px" 
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:gravity="center"
	    android:textSize="30px"
	    android:text="@string/mail" 
		/>
	    <EditText
	    android:id="@+id/mailedit"
	    android:layout_width="260px" 
	    android:layout_height="wrap_content"
	    android:layout_gravity ="center_vertical"
	    android:textSize="30px"
		/>
		<TextView
	    android:layout_width="60px" 
	    android:layout_height="wrap_content"
	    android:layout_gravity ="center_vertical"
	    android:gravity="center"
	    android:textSize="30px"
	    android:text="@string/mustfill" 
		/>
	</LinearLayout>
	<TextView
	    android:layout_width="fill_parent" 
	    android:layout_height="50px"
	    android:layout_marginLeft="160px"
	    android:gravity="center_vertical"
	    android:textSize="20px"
	    android:text="@string/mailsuggest" 
	/>
	<LinearLayout
	android:orientation="horizontal"
	android:layout_width="fill_parent"
	android:layout_height="60px">
	    <TextView
	    android:layout_width="160px" 
	    android:layout_height="wrap_content"
	    android:layout_gravity ="center_vertical"
	    android:gravity="center"
	    android:textSize="30px"
	    android:text="@string/phonename" 
		/>
	    <EditText
	    android:id="@+id/phonenameedit"
	    android:layout_width="260px" 
	    android:layout_height="wrap_content"
	    android:layout_gravity ="center_vertical"
	    android:textSize="30px"
	    android:singleLine="true"
		android:numeric="integer"
		/>
	</LinearLayout>
	<LinearLayout
	android:orientation="horizontal"
	android:layout_width="fill_parent"
	android:layout_height="60px">
	    <TextView
	    android:layout_width="160px" 
	    android:layout_height="wrap_content"
	    android:layout_gravity ="center_vertical"
	    android:gravity="center"
	    android:textSize="30px"
	    android:text="@string/password" 
		/>
	    <EditText
	    android:id="@+id/passwordedit"
	    android:layout_width="260px" 
	    android:layout_height="wrap_content"
	    android:layout_gravity ="center_vertical"
	    android:textSize="30px"
		/>
		<TextView
	    android:layout_width="60px" 
	    android:layout_height="wrap_content"
	    android:layout_gravity ="center_vertical"
	    android:gravity="center"
	    android:textSize="30px"
	    android:text="@string/mustfill" 
		/>
	</LinearLayout>
	<LinearLayout
	android:orientation="horizontal"
	android:layout_width="fill_parent"
	android:layout_height="60px">
	    <TextView
	    android:layout_width="160px" 
	    android:layout_height="wrap_content"
	    android:layout_gravity ="center_vertical"
	    android:gravity="center"
	    android:textSize="30px"
	    android:text="@string/confirm" 
		/>
	    <EditText
	    android:id="@+id/confirmedit"
	    android:layout_width="320px" 
	    android:layout_height="wrap_content"
	    android:layout_gravity ="center_vertical"
	    android:textSize="30px"
		/>
		<TextView
	    android:layout_width="60px" 
	    android:layout_height="wrap_content"
	    android:layout_gravity ="center_vertical"
	    android:gravity="center"
	    android:textSize="30px"
	    android:text="@string/mustfill" 
		/>
	</LinearLayout>
	<LinearLayout
	android:orientation="horizontal"
	android:layout_width="fill_parent"
	android:layout_height="60px">
	    <TextView
	    android:layout_width="160px" 
	    android:layout_height="wrap_content"
	    android:layout_gravity ="center_vertical"
	    android:gravity="center"
	    android:textSize="30px"
	    android:text="@string/state" 
		/>
	    <Spinner
	    android:id="@+id/statespinner"
	    android:layout_width="260px" 
	    android:layout_height="wrap_content"
	    android:layout_gravity ="center_vertical"
	    android:textSize="30px"
		/>
	</LinearLayout>
	<LinearLayout
	android:orientation="horizontal"
	android:layout_width="fill_parent"
	android:layout_height="60px">
	    <TextView
	    android:layout_width="160px" 
	    android:layout_height="wrap_content"
	    android:layout_gravity ="center_vertical"
	    android:gravity="center"
	    android:textSize="30px"
	    android:text="@string/work" 
		/>
	    <EditText
	    android:id="@+id/workedit"
	    android:layout_width="260px" 
	    android:layout_height="wrap_content"
	    android:layout_gravity ="center_vertical"
	    android:textSize="30px"
		/>
	</LinearLayout>
	<TextView
	    android:layout_width="fill_parent" 
	    android:layout_height="50px"
	    android:layout_marginLeft="160px"
	    android:gravity="center_vertical"
	    android:textSize="20px"
	    android:text="@string/worksuggest" 
	/>
	<Button
	android:id="@+id/finishbutton"
	android:layout_width="200px" 
	android:layout_height="100px"
	android:layout_gravity="center_horizontal"
	android:gravity="center"
	android:textSize="30px"
	android:text="@string/finish"
	/>
</LinearLayout>
</RelativeLayout>